Page MenuHome GnuPG

Kleopatra: Restoring column layout in smart card views doesn't work
Closed, ResolvedPublic

Description

How to reproduce:

  • Insert NetKey smart card (or other smart card type with certificate table)
  • Resize the columns
  • Pull the smart card
  • Reinsert the smart card and trigger reload

Result:
All columns of the certificate table have default size.

Expected result:
The columns of the certificate table have the same sizes as before the smart card was pulled.

Event Timeline

ikloecker created this task.
ikloecker added projects: kleopatra, Restricted Project.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Apr 9 2024, 5:00 PM
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo added a subscriber: ebo.

Version 3.2.2.2405000+git~ (Gpg4win-4.3.2-beta41):
works as described with pkcs#15 and netkey cards.
(The column width is then the same for those cards)

ebo edited projects, added vsd33 (vsd-3.3.0); removed vsd33.