Fix restore of column layout of card certificate tree view

The layout must be restored after the widget tree has been set up because
reparenting (which can happen if widgets are inserted in a layout) may
change the style which seems to trigger an automatic column resize.

GnuPG-bug-id: 7080